fix height jump in mtm filter area for cls

--- a/wp-content/themes/makerfaire/less/meet-the-makers-new.less
+++ b/wp-content/themes/makerfaire/less/meet-the-makers-new.less
@@ -99,6 +99,7 @@
         padding-top: 20px;
         padding-bottom: 5px;
         text-align: center;
+        min-height: 71px;
         .mtm-filter-view {
             display: inline-block;
             @media (min-width:768px) and (max-width:991px) {
